我的第二支python

--- a/0919.ipynb
+++ b/0919.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3OL/CaQv27rMorR3lL0bT",
+      "authorship_tag": "ABX9TyNPDbuBzG0S9lIHhr2E6EEB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -319,44 +319,23 @@
     {
       "cell_type": "code",
       "source": [
-        "print(123)"
+        "print(123)\n",
+        "print(456)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9GKyjfwHDGX3",
-        "outputId": "43be00ed-d8f8-4d35-d773-a3fead54784f"
+        "outputId": "c768c3bf-c787-451f-dcb7-12596898170f"
       },
-      "execution_count": 23,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "123\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(456)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OgQMZ0pLDRCP",
-        "outputId": "4f203898-aadc-4120-d2fc-4906f63bc1bd"
-      },
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "123\n",
             "456\n"
           ]
         }
@@ -365,22 +344,23 @@
     {
       "cell_type": "code",
       "source": [
-        "print(123,end=',')"
+        "print(123,end=',')\n",
+        "print(456)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uFiFqS7QDTiH",
-        "outputId": "094157a2-eba0-4be7-d084-15796b3d98d9"
+        "outputId": "5b031b9f-ddd8-4b1c-a9f6-4284effa78bf"
       },
-      "execution_count": 28,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "123,"
+            "123,456\n"
           ]
         }
       ]
@@ -388,68 +368,23 @@
     {
       "cell_type": "code",
       "source": [
+        "print(123,end='')\n",
         "print(456)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "j72XZYqwDY3w",
-        "outputId": "039a9e4a-898b-4525-ce2f-e3bff5db9370"
-      },
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "456\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(123,end='')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RqmRoa1_Db7X",
-        "outputId": "b19a3180-5562-4156-c342-fa0956dac90d"
+        "outputId": "f73b3bac-fec7-49c3-f0a8-874a77a89e40"
       },
-      "execution_count": 30,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "123"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(456)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-dwcjkjwDf34",
-        "outputId": "9fc3fa43-6c60-493b-ca32-c7ad5430e8a2"
-      },
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "456\n"
+            "123456\n"
           ]
         }
       ]
